--- a/style.css
+++ b/style.css
@@ -232,7 +232,7 @@ p {
 /* Hero Section */
 
 #hero {
-    background-image: url(hero.png);
+    background-image: url(delhi.jpg);
     background-size: cover;
     background-position: top center;
     position: relative;
